[gd_scene load_steps=13 format=2]

[ext_resource path="res://PixelArt/UI/Menus/menu_craft.png" type="Texture" id=1]
[ext_resource path="res://UI/Menus/Craft.gd" type="Script" id=2]
[ext_resource path="res://UI/Menus/Craft/Slot.tscn" type="PackedScene" id=3]
[ext_resource path="res://PixelArt/UI/CRAFT_BTN.png" type="Texture" id=4]
[ext_resource path="res://PixelArt/UI/woodUI_inventory.png" type="Texture" id=5]
[ext_resource path="res://Others/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://PixelArt/UI/brickUI_inventory.png" type="Texture" id=7]
[ext_resource path="res://PixelArt/UI/coinUI_inventory.png" type="Texture" id=8]
[ext_resource path="res://UI/Menus/Craft/ResourceSlot.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 6 )

[node name="Craft" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="RInventorySlots" type="GridContainer" parent="Inventory"]
margin_left = 328.0
margin_top = 56.0
margin_right = 496.0
margin_bottom = 256.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 4
__meta__ = {
"_editor_description_": ""
}

[node name="Slot1" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]

[node name="Slot2" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 44.0
margin_right = 68.0

[node name="Slot3" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 88.0
margin_right = 112.0

[node name="Slot4" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 132.0
margin_right = 156.0

[node name="Slot5" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_top = 44.0
margin_bottom = 68.0

[node name="Slot6" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 44.0
margin_top = 44.0
margin_right = 68.0
margin_bottom = 68.0

[node name="Slot7" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 44.0
margin_right = 112.0
margin_bottom = 68.0

[node name="Slot8" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 132.0
margin_top = 44.0
margin_right = 156.0
margin_bottom = 68.0

[node name="Slot9" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_top = 88.0
margin_bottom = 112.0

[node name="Slot10" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 44.0
margin_top = 88.0
margin_right = 68.0
margin_bottom = 112.0

[node name="Slot11" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 88.0
margin_right = 112.0
margin_bottom = 112.0

[node name="Slot12" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 132.0
margin_top = 88.0
margin_right = 156.0
margin_bottom = 112.0

[node name="Slot13" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_top = 132.0
margin_bottom = 156.0

[node name="Slot14" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 44.0
margin_top = 132.0
margin_right = 68.0
margin_bottom = 156.0

[node name="Slot15" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 132.0
margin_right = 112.0
margin_bottom = 156.0

[node name="Slot16" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 132.0
margin_top = 132.0
margin_right = 156.0
margin_bottom = 156.0

[node name="Slot17" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_top = 176.0
margin_bottom = 200.0

[node name="Slot18" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 44.0
margin_top = 176.0
margin_right = 68.0
margin_bottom = 200.0

[node name="Slot19" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 88.0
margin_top = 176.0
margin_right = 112.0
margin_bottom = 200.0

[node name="Slot20" parent="Inventory/RInventorySlots" instance=ExtResource( 3 )]
margin_left = 132.0
margin_top = 176.0
margin_right = 156.0
margin_bottom = 200.0

[node name="LInventorySlots" type="Control" parent="Inventory"]
margin_left = 72.0
margin_top = 176.0
margin_right = 240.0
margin_bottom = 267.0

[node name="WoodUI" type="Control" parent="Inventory/LInventorySlots"]
anchor_top = -0.216
anchor_bottom = -0.216
margin_top = 19.656
margin_right = 70.0
margin_bottom = 43.656

[node name="UItexture" type="TextureRect" parent="Inventory/LInventorySlots/WoodUI"]
margin_right = 64.0
margin_bottom = 24.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodNum" type="Label" parent="Inventory/LInventorySlots/WoodUI"]
margin_left = 24.149
margin_top = 2.652
margin_right = 98.149
margin_bottom = 37.652
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.658824, 0.466667, 0.235294, 1 )
custom_fonts/font = SubResource( 1 )
text = "9999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrickUI" type="Control" parent="Inventory/LInventorySlots"]
margin_left = 104.0
margin_right = 168.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UItexture" type="TextureRect" parent="Inventory/LInventorySlots/BrickUI"]
margin_right = 64.0
margin_bottom = 24.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrickNum" type="Label" parent="Inventory/LInventorySlots/BrickUI"]
margin_left = 2.149
margin_top = 3.425
margin_right = 76.149
margin_bottom = 38.425
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.658824, 0.466667, 0.235294, 1 )
custom_fonts/font = SubResource( 2 )
text = "9999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsUI" type="Control" parent="Inventory/LInventorySlots"]
anchor_top = -0.216
anchor_bottom = -0.216
margin_left = 48.0
margin_top = 47.28
margin_right = 112.0
margin_bottom = 71.28
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="UItexture" type="TextureRect" parent="Inventory/LInventorySlots/CoinsUI"]
margin_right = 64.0
margin_bottom = 24.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsNum" type="Label" parent="Inventory/LInventorySlots/CoinsUI"]
margin_left = 24.149
margin_top = 2.652
margin_right = 98.149
margin_bottom = 37.652
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.658824, 0.466667, 0.235294, 1 )
custom_fonts/font = SubResource( 3 )
text = "9999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceSlot1" parent="Inventory/LInventorySlots" instance=ExtResource( 9 )]
margin_left = 1.0
margin_right = 25.0
ItemName = "Wood"

[node name="ResourceSlot2" parent="Inventory/LInventorySlots" instance=ExtResource( 9 )]
margin_left = 143.0
margin_right = 167.0
ItemName = "Brick"

[node name="ResourceSlot3" parent="Inventory/LInventorySlots" instance=ExtResource( 9 )]
margin_left = 49.0
margin_top = 28.0
margin_right = 73.0
margin_bottom = 52.0
ItemName = "Coin"

[node name="HotbarSlots" type="GridContainer" parent="Inventory/LInventorySlots"]
margin_left = 12.0
margin_top = 64.0
margin_right = 156.0
margin_bottom = 88.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 6
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Slot1" parent="Inventory/LInventorySlots/HotbarSlots" instance=ExtResource( 3 )]
IsHotbar = true

[node name="Slot2" parent="Inventory/LInventorySlots/HotbarSlots" instance=ExtResource( 3 )]
margin_left = 24.0
margin_right = 48.0
IsHotbar = true

[node name="Slot3" parent="Inventory/LInventorySlots/HotbarSlots" instance=ExtResource( 3 )]
margin_left = 48.0
margin_right = 72.0
IsHotbar = true

[node name="Slot4" parent="Inventory/LInventorySlots/HotbarSlots" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 96.0
IsHotbar = true

[node name="Slot5" parent="Inventory/LInventorySlots/HotbarSlots" instance=ExtResource( 3 )]
margin_left = 96.0
margin_right = 120.0
IsHotbar = true

[node name="Slot6" parent="Inventory/LInventorySlots/HotbarSlots" instance=ExtResource( 3 )]
margin_left = 120.0
margin_right = 144.0
IsHotbar = true

[node name="CraftSlots" type="GridContainer" parent="."]
margin_left = 70.0
margin_top = 68.0
margin_right = 238.0
margin_bottom = 92.0
custom_constants/vseparation = 20
custom_constants/hseparation = 12
columns = 5
__meta__ = {
"_editor_description_": ""
}

[node name="CSlot1" parent="CraftSlots" instance=ExtResource( 3 )]

[node name="CSlot2" parent="CraftSlots" instance=ExtResource( 3 )]
margin_left = 36.0
margin_right = 60.0

[node name="CSlot3" parent="CraftSlots" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 96.0

[node name="CSlot4" parent="CraftSlots" instance=ExtResource( 3 )]
margin_left = 108.0
margin_right = 132.0

[node name="CSlot5" parent="CraftSlots" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 168.0

[node name="CraftBtn" type="TextureButton" parent="."]
margin_left = 123.0
margin_top = 109.0
margin_right = 183.0
margin_bottom = 129.0
texture_normal = ExtResource( 4 )
expand = true

[connection signal="pressed" from="CraftBtn" to="." method="_on_CraftBtn_pressed"]
